Add link to contact form

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<header>
 				<h1>Josep Llaneras</h1>
 				<ul class="contact-data">
-					<li><i class="fa fa-linkedin-square" aria-hidden="true" title="LinkedIn"></i> <a href="https://www.linkedin.com/in/jllaneras">linkedin.com/in/jllaneras</a></li>
+					<li><i class="fa fa-envelope" aria-hidden="true" title="email"></i> <a href="https://kontactr.com/user/jllaneras">Contact me</a></li>
 				</ul>
 			</header>
 
