Fix Languages section

--- a/index.html
+++ b/index.html
@@ -70,10 +70,14 @@
 							<h3>Building a wide variety of software projects from A to Z for different public and private companies</h3>
 							<p>3digits focuses mainly on developing software projects for the public administration of the Balearic Islands (Spain), even though I also worked on projects for international companies (like <a href="http://group.hotelbeds.com/content/about-us">Hotelbeds</a>) and for smaller local companies as well (e.g. online shops).</p>
 							<p>Among other projects, we also open sourced <a href="http://ibkey.sourceforge.net/?idioma=en_EN">IBKey-Device-Manager</a>, a Java library to abstract away the access to digital certificates contained in different device types and the generation and verification of digital signatures used in web applications we developed for the public administration.</p>
-							<p>During my job at 3digits I worked on a wide range of projects covering all the phases of the software life cycle: planning, implementation, testing, documentation , deployment and maintenance.
-				<div class="clear"/>
+							<p>During my job at 3digits I worked on a wide range of projects covering all the phases of the software life cycle: planning, implementation, testing, documentation , deployment and maintenance.</p>
+					</div>
+				</div>
+				
+			</section>
 
-				<h2>Languages</h2>
+			<section>
+				<h1>Languages</h1>
 				<div class="accomplishment">
 					<ul>
 						<li>Fluent in <b>English, Catalan and Spanish</b></li>
