Make site phone friendlish

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		      href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Libre+Baskerville">
 		<link rel="stylesheet" href="./css/styles.css"/>
 		<script src="https://use.fontawesome.com/a254ee94db.js"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
 		<main>
@@ -54,8 +55,6 @@
 					</div>
 				</div>
 
-				<div class="page-break"></div>
-
 				<h2>Full Stack Web Developer @ 3digits</h2>
 				<div class="experience">
 					<aside>
@@ -86,8 +85,6 @@
 				</div>
 			</section>
 				 
-			<div class="page-break"></div>
- 
 			<section>
 				<h1>Interests</h1>
 				<ul>
