--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
 		<link rel="stylesheet" type="text/css"
 		      href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Libre+Baskerville">
 		<link rel="stylesheet" href="./css/styles.css"/>
+
 		<script src="https://use.fontawesome.com/a254ee94db.js"></script>
+
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
 		<main>
 
 			<header>
-				<h1>Josep Llaneras</h1>
+				<h1>Hi, I'm Pep</h1>
 				<ul class="contact-data">
 					<li><i class="fa fa-envelope" aria-hidden="true" title="email"></i> <a href="#contact">Contact me</a></li>
 				</ul>
+				<p>This is my online curriculum vitae. I'm a software developer living in Brussels, Belgium. I've been working professionally on software development since 2007. You can have a look below for more details and feel free to <a href="#contact">contact me</a> if you're interested in my profile.</p>
 			</header>
 
 	       	<section>
