Remove Subject field in the contact form

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 					<ul>
 						<li><input type="text" name="name" placeholder="Name" required /></li>
 						<li><input type="email" name="email" placeholder="Email" required /></li>
-						<li><input type="text" name="*subject" placeholder="Subject" required /></li>
 						<li><textarea name="message" rows="4" placeholder="Message" required></textarea></li>
-						<li><input type="submit" value="Send Email" /></li>
+						<li><input type="submit" value="Send email" /></li>
 					</ul>
+					<input type="hidden" name="*subject" value="jmln.me|contact" />
 					<input type="hidden" name="*reply" value="email" />
 					<input type="hidden" name="*honeypot" />
 					<input type="hidden" name="*redirect" value="http://jmln.me/message-sent.html" />
