Add missing sections

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<div class="description">
 							<h3>Building the Home'Bank private website for retail customers</h3>
 							<p>ING Belgium is the Belgian subsidiary of the ING Group, an international banking company.</p>
-							<p>My team was in charge of revamping Home'Bank, the retail customer website, using modern technologies. We also used Agile practices, like the SCRUM methodology, continuous delivery, pair programming, code reviews, etc. I worked on the home page of the Home'Bank website where the customers can check the status of their accounts. I also worked on the Investments and User Settings web applications.</p>
+							<p>My team was in charge of revamping Home'Bank, the retail customer website, using modern technologies. We also used Agile practices, like the Scrum methodology, continuous delivery, pair programming, code reviews, etc. I worked on the home page of the Home'Bank website where the customers can check the status of their accounts. I also worked on the Investments and User Settings web applications.</p>
 						<p>Even though I helped a bit with everything, my primary role in the team was to create the necessary REST APIs that integrate with multiple back-end services, cache the data when possible, and serve it in a convenient format to front-end applications running in the web browser.</p>
 					</div>
 				</div>
@@ -79,24 +79,39 @@
 			</section>
 
 			<section>
+				<h1>University studies</h1>
+				<h2>Master's degree in Computer Science</h2>
+				<div class="experience">
+					<ul>
+						<li><i class="fa fa-calendar" aria-hidden="true" title="Dates"></i> Oct 2002 &rArr; Oct 2007 </li>
+						<li><i class="fa fa-globe" aria-hidden="true" title="Location"></i> Palma (Spain)<li>
+						<li><i class="fa fa-building-o" aria-hidden="true" title="Business"></i> University of the Balearic Islands</li>
+						<li><i class="fa fa-link" aria-hidden="true" title="Website"></i> <a href="http://www.uib.eu">uib.eu</a></li>
+					</ul>
+				</div>
+			</section>
+
+			<section>
 				<h1>Languages</h1>
-				<div class="accomplishment">
+				<div class="experience">
 					<ul>
 						<li>Fluent in <b>English, Catalan and Spanish</b></li>
 						<li>Elementary proficiency in <b>French and Dutch</b></li>
 					</ul>
 				</div>
-			</section>
-				 
+			</section>			
+
 			<section>
 				<h1>Interests</h1>
-				<ul>
-					<li>Free Software &amp; Open Source</li>
-					<li>GNU/Linux</li>
-					<li>Learning</li>
-					<li>Sustainability</li>
-					<li>DIY</li>
-				</ul>
+				<div class="experience">
+					<ul>
+						<li>Free Software &amp; Open Source</li>
+						<li>GNU/Linux</li>
+						<li>Learning</li>
+						<li>Sustainability</li>
+						<li>DIY</li>
+					</ul>
+				</div>
 
 			</section>
 
