--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 	<head>
 		<link rel="stylesheet" type="text/css"
 		      href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Libre+Baskerville">
-		<link rel="stylesheet" href="./css/styles.css"/>
+		<link rel="stylesheet" href="css/vita.css"/>
 
 		<script src="https://use.fontawesome.com/a254ee94db.js"></script>
+		<script src="js/vita.js"></script>
+		<script type="text/javascript">
+			document.documentElement.className = "js";
+		</script>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
@@ -20,7 +24,7 @@
 				<p>This is my online curriculum vitae. I'm a software developer living in Brussels, Belgium. I've been working professionally on software development since 2007. You can have a look below for more details and feel free to <a href="#contact">contact me</a> if you're interested in my profile.</p>
 			</header>
 
-	       	<section>
+	       	<section id="experience">
 				<h1>Experience</h1>
 				<h2>Advisory Technical Analyst @ ING Belgium</h2>
 				<div class="experience">
@@ -34,6 +38,9 @@
 					</aside>
 					<div class="description">
 							<h3>Building the Home'Bank private website for retail customers</h3>
+
+							<button class="read-more hidden" onclick="VITA.showJobDescription(this.parentNode, event)">Read more</button>
+
 							<p>ING Belgium is the Belgian subsidiary of the ING Group, an international banking company.</p>
 							<p>My team was in charge of revamping Home'Bank, the retail customer website, using modern technologies. We also used Agile practices, like the Scrum methodology, continuous delivery, pair programming, code reviews, etc. I worked on the home page of the Home'Bank website where the customers can check the status of their accounts. I also worked on the Investments and User Settings web applications.</p>
 						<p>Even though I helped a bit with everything, my primary role in the team was to create the necessary REST APIs that integrate with multiple back-end services, cache the data when possible, and serve it in a convenient format to front-end applications running in the web browser.</p>
@@ -52,6 +59,9 @@
 					</aside>
 					<div class="description">
 							<h3>Building the software platform for European Schoolnet</h3>
+
+							<button class="read-more hidden" onclick="VITA.showJobDescription(this.parentNode, event)">Read more</button>
+
 							<p>European Schoolnet is a network of 31 European Ministries of Education. As a non-profit organization, it aims to bring innovation in teaching and learning to its key stakeholders: Ministries of Education, schools, teachers, researchers and industry partners.</p>
 							<p>I was part of the technical team dedicated to support the other teams in the organization, composed of about 80 people. We created and maintained the necessary infrastructure, tools and web applications that enabled us to, not only sustain the network of European Ministries of Education, but also to develop websites and web applications for the European Commission and some industry partners.</p>
 							<p>I was working as both front-end and back-end web developer.</p>				
@@ -69,8 +79,11 @@
 						</ul>
 					</aside>
 					<div class="description">
-							<h3>Building a wide variety of software projects from A to Z for different public and private companies</h3>
-							<p>3digits focuses mainly on developing software projects for the public administration of the Balearic Islands (Spain), even though I also worked on projects for international companies (like <a href="http://group.hotelbeds.com/content/about-us">Hotelbeds</a>) and for smaller local companies as well (e.g. online shops).</p>
+						<h3>Building a wide variety of software projects from A to Z for different public and private companies</h3>
+	
+							<button class="read-more hidden" onclick="VITA.showJobDescription(this.parentNode, event)">Read more</button>
+
+						<p>3digits focuses mainly on developing software projects for the public administration of the Balearic Islands (Spain), even though I also worked on projects for international companies (like <a href="http://group.hotelbeds.com/content/about-us">Hotelbeds</a>) and for smaller local companies as well (e.g. online shops).</p>
 							<p>Among other projects, we also open sourced <a href="http://ibkey.sourceforge.net/?idioma=en_EN">IBKey-Device-Manager</a>, a Java library to abstract away the access to digital certificates contained in different device types and the generation and verification of digital signatures used in web applications we developed for the public administration.</p>
 							<p>During my job at 3digits I worked on a wide range of projects covering all the phases of the software life cycle: planning, implementation, testing, documentation , deployment and maintenance.</p>
 					</div>
@@ -125,7 +138,7 @@
 						<li><input type="text" name="name" placeholder="Name" required /></li>
 						<li><input type="email" name="email" placeholder="Email" required /></li>
 						<li><textarea name="message" rows="4" placeholder="Message" required></textarea></li>
-						<li class="form-buttons"><input type="submit" value="Send email" /></li>
+						<li><input type="submit" value="Send email" /></li>
 					</ul>
 					<input type="hidden" name="*subject" value="jmln.me|contact" />
 					<input type="hidden" name="*reply" value="email" />
