Add missing Google fonts

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css"
-		      href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Libre+Baskerville">
+		      href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans:regular,bold|Roboto|Libre+Baskerville">
 		<link rel="stylesheet" href="css/vita.css"/>
 
 		<script src="https://use.fontawesome.com/a254ee94db.js"></script>
