--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						</ul>
 					</aside>
 					<div class="description">
-							<h3>Building the software platform for European Schoolnet</h3>
+							<h3>Building web applications and services to support the network of European Ministries of Education</h3>
 
 							<button class="read-more hidden">Read more</button>
 
@@ -79,7 +79,7 @@
 						</ul>
 					</aside>
 					<div class="description">
-						<h3>Building a wide variety of software projects from A to Z for different public and private companies</h3>
+						<h3>Building a wide variety of intranet and extranet applications mainly for the public administration but also for private companies</h3>
 	
 							<button class="read-more hidden">Read more</button>
 
@@ -111,8 +111,8 @@
 				<h1>Languages</h1>
 				<div class="experience">
 					<ul>
-						<li>Fluent in <b>English, Catalan and Spanish</b></li>
-						<li>Elementary proficiency in <b>French and Dutch</b></li>
+						<li>I speak and write fluently in <b>English</b>, <b>Catalan</b> and <b>Spanish</b></li>
+						<li>I have a basic level of written and spoken <b>French</b> and <b>Dutch</b></li>
 					</ul>
 				</div>
 			</section>			
