--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<header>
 				<h1>Hi, I'm Pep</h1>
 				<ul class="contact-data">
-					<li><i class="fa fa-envelope" aria-hidden="true" title="email"></i> <a href="#contact">Contact</a></li>
+					<li class="contact-link"><i class="fa fa-envelope" aria-hidden="true" title="email"></i> <a href="#contact">Contact</a></li>
 				</ul>
 				<p>This is my online curriculum vitae. I'm a software developer living in Brussels, Belgium. I've been working professionally on software development since 2007. You can have a look below for more details and feel free to <a href="#contact">contact me</a> if you're interested in my profile.</p>
 			</header>
