Add meta and title tags to describe the page

--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 		</script>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="I'm Pep Llaneras, a software developer living in Brussels, Belgium. This is my online curriculum vitae." />
+		<title>Pep Llaneras - Software Developer</title>
 	</head>
 	<body>
 		<main>
 
 			<header>
-				<h1>Hi, I'm Pep</h1>
+				<h1>Hi, I'm Pep Llaneras</h1>
 				<ul class="contact-data">
 					<li class="contact-link"><i class="fa fa-envelope" aria-hidden="true" title="email"></i> <a href="#contact">Contact</a></li>
 				</ul>
