--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<link rel="stylesheet" type="text/css"
 		      href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans:regular,bold|Roboto|Libre+Baskerville">
@@ -7,7 +7,7 @@
 
 		<script src="https://use.fontawesome.com/a254ee94db.js"></script>
 		<script src="js/vita.js"></script>
-		<script type="text/javascript">
+		<script>
 			document.documentElement.className = "js";
 		</script>
 
@@ -147,7 +147,7 @@
 					<input type="hidden" name="*subject" value="jmln.me|contact" />
 					<input type="hidden" name="*reply" value="email" />
 					<input type="hidden" name="*honeypot" />
-				<form/>
+				</form>
 			</section>
 
 
