Add meta so Bing can validate the ownership of the website

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="I'm Pep Llaneras, a software developer living in Brussels, Belgium. This is my online curriculum vitae." />
+		<meta name="msvalidate.01" content="A1835DE6E76EA89335FCA5CC89C93C51" />
 		<title>Pep Llaneras - Software Developer</title>
 	</head>
 	<body>
