Add Google analytics

--- a/index.html
+++ b/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link rel="stylesheet" type="text/css"
-		      href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans:regular,bold|Roboto|Libre+Baskerville">
-		<link rel="stylesheet" href="css/vita.css"/>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129424616-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'UA-129424616-1');
+		</script>
 
 		<script src="https://use.fontawesome.com/a254ee94db.js"></script>
 		<script src="js/vita.js"></script>
 		<script>
 			document.documentElement.className = "js";
 		</script>
+
+		<link rel="stylesheet" type="text/css"
+		      href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans:regular,bold|Roboto|Libre+Baskerville">
+		<link rel="stylesheet" href="css/vita.css"/>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="I'm Pep Llaneras, a software developer living in Brussels, Belgium. This is my online curriculum vitae." />
