Upgrade to Font Awesome 5.5.0

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 			gtag('js', new Date());
 			gtag('config', 'UA-129424616-1');
 		</script>
-
-		<script src="https://use.fontawesome.com/a254ee94db.js"></script>
 		<script src="js/vita.js"></script>
 		<script>
 			document.documentElement.className = "js";
@@ -18,6 +16,7 @@
 
 		<link rel="stylesheet" type="text/css"
 		      href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans:regular,bold|Roboto|Libre+Baskerville">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/vita.css"/>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,7 +30,7 @@
 			<header>
 				<h1>Hi, I'm Pep Llaneras</h1>
 				<ul class="contact-data">
-					<li class="contact-link"><i class="fa fa-envelope" aria-hidden="true" title="email"></i> <a href="#contact">Contact</a></li>
+					<li class="contact-link"><i class="fas fa-envelope" aria-hidden="true" title="email"></i> <a href="#contact">Contact</a></li>
 				</ul>
 				<p>This is my online curriculum vitae. I'm a software developer living in Brussels, Belgium. I've been working professionally on software development since 2007. You can have a look below for more details and feel free to <a href="#contact">contact me</a> if you're interested in my profile.</p>
 			</header>
@@ -42,10 +41,10 @@
 				<div class="experience">
 					<aside>
 						<ul>
-							<li><i class="fa fa-calendar" aria-hidden="true" title="Dates"></i> May 2015 &rArr; Nov 2017 </li>
-							<li><i class="fa fa-globe" aria-hidden="true" title="Location"></i> Brussels (Belgium)</li>
-							<li><i class="fa fa-building-o" aria-hidden="true" title="Business"></i> Banking</li>
-							<li><i class="fa fa-link" aria-hidden="true" title="Website"></i> <a href="https://www.ing.be">ing.be</a></li>
+							<li><i class="far fa-calendar" aria-hidden="true" title="Dates"></i> May 2015 &rArr; Nov 2017 </li>
+							<li><i class="fas fa-globe-americas" aria-hidden="true" title="Location"></i> Brussels (Belgium)</li>
+							<li><i class="far fa-building" aria-hidden="true" title="Business"></i> Banking</li>
+							<li><i class="fas fa-link" aria-hidden="true" title="Website"></i> <a href="https://www.ing.be">ing.be</a></li>
 						</ul>
 					</aside>
 					<div class="description">
@@ -63,10 +62,10 @@
 				<div class="experience">
 					<aside>
 						<ul>
-							<li><i class="fa fa-calendar" aria-hidden="true" title="Dates"></i> Apr 2012 &rArr; May 2015 </li>
-							<li><i class="fa fa-globe" aria-hidden="true" title="Location"></i> Brussels (Belgium)</li>
-							<li><i class="fa fa-building-o" aria-hidden="true" title="Business"></i> Education</li>
-							<li><i class="fa fa-link" aria-hidden="true" title="Website"></i> <a href="http://www.eun.org">eun.org</a></li>
+							<li><i class="far fa-calendar" aria-hidden="true" title="Dates"></i> Apr 2012 &rArr; May 2015 </li>
+							<li><i class="fas fa-globe-americas" aria-hidden="true" title="Location"></i> Brussels (Belgium)</li>
+							<li><i class="far fa-building" aria-hidden="true" title="Business"></i> Education</li>
+							<li><i class="fas fa-link" aria-hidden="true" title="Website"></i> <a href="http://www.eun.org">eun.org</a></li>
 						</ul>
 					</aside>
 					<div class="description">
@@ -84,10 +83,10 @@
 				<div class="experience">
 					<aside>
 						<ul>
-							<li><i class="fa fa-calendar" aria-hidden="true" title="Dates"></i> Jun 2007 &rArr; Apr 2012 </li>
-							<li><i class="fa fa-globe" aria-hidden="true" title="Location"></i> Palma (Spain)</li>
-							<li><i class="fa fa-building-o" aria-hidden="true" title="Business"></i> Software consultancy</li>
-							<li><i class="fa fa-link" aria-hidden="true" title="Website"></i> <a href="http://www.3digits.es">3digits.es</a></li>
+							<li><i class="far fa-calendar" aria-hidden="true" title="Dates"></i> Jun 2007 &rArr; Apr 2012 </li>
+							<li><i class="fas fa-globe-americas" aria-hidden="true" title="Location"></i> Palma (Spain)</li>
+							<li><i class="far fa-building" aria-hidden="true" title="Business"></i> Software consultancy</li>
+							<li><i class="fas fa-link" aria-hidden="true" title="Website"></i> <a href="http://www.3digits.es">3digits.es</a></li>
 						</ul>
 					</aside>
 					<div class="description">
@@ -109,10 +108,10 @@
 				<div class="experience">
 					<aside>
 						<ul>
-							<li><i class="fa fa-calendar" aria-hidden="true" title="Dates"></i> Oct 2002 &rArr; Oct 2007 </li>
-							<li><i class="fa fa-globe" aria-hidden="true" title="Location"></i> Palma (Spain)<li>
-							<li><i class="fa fa-building-o" aria-hidden="true" title="Business"></i> University of the Balearic Islands</li>
-							<li><i class="fa fa-link" aria-hidden="true" title="Website"></i> <a href="http://www.uib.eu">uib.eu</a></li>
+							<li><i class="far fa-calendar" aria-hidden="true" title="Dates"></i> Oct 2002 &rArr; Oct 2007 </li>
+							<li><i class="fas fa-globe-americas" aria-hidden="true" title="Location"></i> Palma (Spain)<li>
+							<li><i class="far fa-building" aria-hidden="true" title="Business"></i> University of the Balearic Islands</li>
+							<li><i class="fas fa-link" aria-hidden="true" title="Website"></i> <a href="http://www.uib.eu">uib.eu</a></li>
 						</ul>
 					</aside>
 					<div class="description"></div>
