Use descriptive job title

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	       	<section id="experience">
 				<h1>Experience</h1>
 				<div class="experience">
-					<h2>Advisory Technical Analyst @ ING Belgium</h2>
+					<h2>DevOps Engineer @ ING Belgium</h2>
 					<aside>
 						<ul>
 							<li><i class="far fa-calendar" aria-hidden="true" title="Dates"></i> May 2015 &rArr; Nov 2017 </li>
