Encode pipe character in Google Fonts URL to comply with HTML

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</script>
 
 		<link rel="stylesheet" type="text/css"
-		      href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans:regular,bold|Roboto|Libre+Baskerville">
+		      href="https://fonts.googleapis.com/css?family=Open+Sans%7COpen+Sans:regular,bold%7CRoboto%7CLibre+Baskerville">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 		<link rel="stylesheet" href="css/vita.css"/>
 
